form draws to page

--- a/app/views/CarsView.html
+++ b/app/views/CarsView.html
@@ -1,4 +1,4 @@
-<section class="row bg-success">
+<section class="row">
   <h1 class="text-primary text-center">Cars Page</h1>
 </section>
 <form onsubmit="app.CarsController.createCar()" class="row bg-white shadow mb-5 rounded">
