working on loading houses from form inputs

--- a/app/views/HousesView.html
+++ b/app/views/HousesView.html
@@ -63,8 +63,8 @@
           No
         </label>
       </div>
-
     </div>
+    <button type="submit" class="btn btn-primary"><i class="mdi mdi-plus"></i>Submit</button>
 
     <div class="mb-2 col-12 text-end">
 
